# cortex-board

./: .gitignore  LICENSE  README.md  api.py  backend.py  board_core.py  capacitor.config.ts  config.py  github_backend.py  pyproject.toml  server.py  tickets_source.py  todoist_backend.py  token_usage.py
app/: ionic.config.json  package-lock.json  package.json
app/src/app/: app-routing.module.ts
app/src/app/board/: board.page.html  board.page.scss  board.page.ts
app/src/app/docs/: docs.page.scss  docs.page.ts
app/src/app/monitoring/: monitoring.module.ts  monitoring.page.html  monitoring.page.scss  monitoring.page.ts
app/src/environments/: environment.prod.ts
docs/: T-255_todoist_bestandsaufnahme.md  board-chain-refs.md
src/: global.scss
src/app/board/: board-routing.module.ts  board.module.ts  board.page.html  board.page.ts
src/app/docs/: docs.module.ts  docs.page.html
src/app/home/: home.page.html  home.page.scss  home.page.ts
src/app/services/: board.service.ts
src/environments/: environment.prod.ts  environment.ts
systemd/: cortex-board-token-sample.service  cortex-board-token-sample.timer  install.sh
tests/: .gitignore  smoketest_status_parser_both_forms.py  smoketest_todoist_backend.py  smoketest_token_usage.py  test_phase1_characterization.py  test_sync_provenance_routing.py  test_sync_release_gate_routing.py
tools/: archive_done_tickets.py  backfill_manager_board.py  export_todoist_to_md.py  migrate_md_to_github.py  migrate_md_to_todoist.py  sample_token_usage.py  sync_github_todoist.py  sync_md_to_todoist.py
(+3 files in other folders)
