[project]
name = "cortex-board"
version = "1.0.0"
description = "Cortex Kanban board — FastMCP server (for Claude) + FastAPI (for the Ionic app) over per-column JSON files"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["board_core", "server", "api"]
