[project]
name = "cortex-board"
version = "1.0.0"
description = "Cortex Kanban board — FastMCP server (for Claude) + FastAPI (REST + Ionic app host), projected live from ~/cortex/docs/tickets/*.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["tickets_source", "server", "api"]
